<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/screen_horizontal_margin"
    android:layout_marginEnd="@dimen/screen_horizontal_margin">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/BackButton"
        android:layout_width="@dimen/btn_dimen"
        android:layout_height="@dimen/btn_dimen"
        android:layout_marginTop="@dimen/back_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gabrielbmoro.crazymath.presentation.components.NavoTalkComponent
        android:id="@+id/navo_talk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/navo_talk"
        app:layout_constraintStart_toStartOf="@id/navo_talk"
        app:layout_constraintTop_toBottomOf="@id/navo_talk">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            style="@style/Text.Form.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cancel_button"
        style="@style/NegativeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="@+id/email_input_layout"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="@+id/save_button" />

    <Button
        android:id="@+id/save_button"
        style="@style/SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintStart_toStartOf="@+id/email_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>